--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <strong>GHITA MAHMOUDY</strong>
             </h1>
             <h2>Student</h2>
-            <img src="c:\Users\user\Downloads\5.jpg" alt="picture">
+            <img src="image/5.jpg" alt="picture" width="150" height="200">
         </div>
 
         <div>
@@ -29,8 +29,7 @@
         <div class="column-container">
             <div class="column-left">
             <h2>EDUCATION</h2>
-            <p> Bachelor of business administration    
-                Newton's International school/2019 </p>
+            <p> Newton's International school/2024 </p>
 
              <h2>SKILL</h2>
                 <ul>
